tests/regression/pr61/smt.smt2
(set-info :smt-lib-version 2.6)
(set-logic FP)
(set-info :source |
Generated by: Anastasiia Izycheva, Eva Darulova
Generated on: 2020-09-11
Generator: Pine (using Z3 Python API)
Application: Check inductiveness of a loop invariant
Target solver: CVC4

These benchmarks were generated while developing the tool Pine [1], which uses
CVC4/Z3 to check inductiveness of invariants. The work is described in [2].

[1] https://github.com/izycheva/pine
[2] A.Izycheva, E.Darulova, H.Seidl, SAS'20, "Counterexample- and Simulation-Guided Floating-Point Loop Invariant Synthesis"

 Loop:
   x' := x + 0.01 * (-2*x - 3*y + x*x)
   y' := y + 0.01 * (x + y)

 Input ranges:
   x in [0.0,0.1]
   y in [0.0,0.1]

 Invariant:
   -0.03*x + -0.14*y + 0.34*x^2 + 0.63*x*y + 1.0*y^2 <= 0.01
 and
   x in [-0.3,0.1]
   y in [-0.1,0.2]

 Query: Loop and Invariant and not Invariant'
|)
(set-info :license "https://creativecommons.org/licenses/by/4.0/")
(set-info :category "industrial")
(set-info :status unknown)
(declare-fun x!FP () (_ FloatingPoint 8 24))
(declare-fun y!FP () (_ FloatingPoint 8 24))
(declare-fun yFP () (_ FloatingPoint 8 24))
(declare-fun xFP () (_ FloatingPoint 8 24))
(assert
 (let ((?x135 (fp.mul roundNearestTiesToEven (fp.mul roundNearestTiesToEven (fp #b0 #x7f #b00000000000000000000000) y!FP) y!FP)))
 (let ((?x136 (fp.add roundNearestTiesToEven ?x135 (fp.mul roundNearestTiesToEven (fp #b1 #x79 #b11101011100001010001111) x!FP))))
 (let ((?x133 (fp.mul roundNearestTiesToEven (fp.mul roundNearestTiesToEven (fp #b0 #x7e #b01000010100011110101110) x!FP) y!FP)))
 (let ((?x131 (fp.mul roundNearestTiesToEven (fp.mul roundNearestTiesToEven (fp #b0 #x7d #b01011100001010001111010) x!FP) x!FP)))
 (let ((?x138 (fp.add roundNearestTiesToEven ?x131 (fp.add roundNearestTiesToEven ?x133 ?x136))))
 (let ((?x139 (fp.add roundNearestTiesToEven (fp.mul roundNearestTiesToEven (fp #b1 #x7c #b00011110101110000101000) y!FP) ?x138)))
 (let (($x140 (fp.leq ?x139 (fp #b0 #x78 #b01000111101011100001010))))
 (let (($x127 (fp.leq y!FP (fp #b0 #x7c #b10011001100110011001100))))
 (let (($x126 (fp.leq (fp #b1 #x7b #b10011001100110011001100) y!FP)))
 (let (($x125 (fp.leq x!FP (fp #b0 #x7b #b10011001100110011001100))))
 (let (($x124 (fp.leq (fp #b1 #x7d #b00110011001100110011001) x!FP)))
 (let ((?x155 (fp.mul roundNearestTiesToEven (fp #b0 #x78 #b01000111101011100001010) (fp.add roundNearestTiesToEven xFP yFP))))
 (let (($x157 (fp.eq y!FP (fp.add roundNearestTiesToEven yFP ?x155))))
 (let ((?x149 (fp.mul roundNearestTiesToEven xFP xFP)))
 (let ((?x147 (fp.mul roundNearestTiesToEven (fp #b0 #x80 #b10000000000000000000000) yFP)))
 (let ((?x148 (fp.sub roundNearestTiesToEven (fp.mul roundNearestTiesToEven (fp.neg (fp #b0 #x80 #b00000000000000000000000)) xFP) ?x147)))
 (let ((?x151 (fp.mul roundNearestTiesToEven (fp #b0 #x78 #b01000111101011100001010) (fp.add roundNearestTiesToEven ?x148 ?x149))))
 (let (($x159 (and (and (fp.eq x!FP (fp.add roundNearestTiesToEven xFP ?x151)) $x157))))
 (let ((?x115 (fp.mul roundNearestTiesToEven (fp.mul roundNearestTiesToEven (fp #b0 #x7f #b00000000000000000000000) yFP) yFP)))
 (let ((?x116 (fp.add roundNearestTiesToEven ?x115 (fp.mul roundNearestTiesToEven (fp #b1 #x79 #b11101011100001010001111) xFP))))
 (let ((?x112 (fp.mul roundNearestTiesToEven (fp.mul roundNearestTiesToEven (fp #b0 #x7e #b01000010100011110101110) xFP) yFP)))
 (let ((?x109 (fp.mul roundNearestTiesToEven (fp.mul roundNearestTiesToEven (fp #b0 #x7d #b01011100001010001111010) xFP) xFP)))
 (let ((?x118 (fp.add roundNearestTiesToEven ?x109 (fp.add roundNearestTiesToEven ?x112 ?x116))))
 (let ((?x119 (fp.add roundNearestTiesToEven (fp.mul roundNearestTiesToEven (fp #b1 #x7c #b00011110101110000101000) yFP) ?x118)))
 (let (($x121 (fp.leq ?x119 (fp #b0 #x78 #b01000111101011100001010))))
 (let (($x102 (fp.leq yFP (fp #b0 #x7c #b10011001100110011001100))))
 (let (($x101 (fp.leq (fp #b1 #x7b #b10011001100110011001100) yFP)))
 (let (($x92 (fp.leq xFP (fp #b0 #x7b #b10011001100110011001100))))
 (let (($x98 (fp.leq (fp #b1 #x7d #b00110011001100110011001) xFP)))
 (and (and (and $x98 $x92 $x101 $x102) $x121 ) $x159 (not (and (and $x124 $x125 $x126 $x127) $x140 )))))))))))))))))))))))))))))))))
(check-sat)
(exit)
